# sefaRoute

./: .dockerignore  .env  .env.example  .gitignore  .graphifyignore  Dockerfile  alembic.ini  basedpyrightconfig.json  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  render.yaml  requirements-test.txt  session-ses_1fc3.md  test_api.md
.github/: copilot-instructions.md
.opencode/: AGENT.md  api-testing-framework.md  llm-gateway-plan.md
.opencode/agents/: backend-specialist.md  code-archaeologist.md  database-architect.md  debugger.md  devops-engineer.md  documentation-writer.md  explorer-agent.md  frontend-specialist.md  game-developer.md  mobile-developer.md  orchestrator.md  penetration-tester.md  performance-optimizer.md  product-manager.md  product-owner.md  project-planner.md  qa-automation-engineer.md  security-auditor.md  (+2 more)
.playwright-mcp/: page-2026-05-14T06-21-09-303Z.yml
alembic/: env.py
auth/: dependencies.py  jwt_handler.py
core/: dependencies.py  dispatcher.py  feature_extractor.py  rate_limiter.py  router.py  train.py
db/: crud.py  database.py  models.py
docs/: Prompt_Complexity_Classifier_Presentation.pptx  docker.md  implementation-guide.md  migrations.md  monitoring.md  system_workflow.md
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
graphify-out/: .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
services/: error_tracking.py  telemetry.py
tests/: config.py  conftest.py  helpers.py  run_tests.py
(+61 files in other folders)
